--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "private": true,
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.2",
+    "@graphql-codegen/typescript": "^2.8.7",
     "@graphql-codegen/typescript-apollo-angular": "^3.5.6",
+    "@graphql-codegen/typescript-operations": "^2.5.12",
     "typescript": "~4.8.2"
   },
   "dependencies": {
-    "@angular/core": "^15.0.4",
+    "@angular/core": "^14.2.12",
     "apollo-angular": "^4.1.1"
   }
 }
